--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-safari-launcher": "~0.0.3",
     "lockfile": "~>0.3.0",
     "grunt-sass": "~0.6.1",
-    "grunt-contrib-sass": "~0.4.1"
+    "grunt-contrib-sass": "~0.4.1",
+    "grunt-s3": "~0.2.0-alpha.2"
   }
 }
